--- a/concurrent-hash-trie/.settings/org.eclipse.jdt.core.prefs
+++ b/concurrent-hash-trie/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Wed Nov 09 12:15:59 CET 2011
+#Thu Nov 10 14:38:44 CET 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.formatter.align_type_members_on_columns=false
 org.eclipse.jdt.core.formatter.alignment_for_arguments_in_allocation_expression=16
@@ -232,7 +232,7 @@ org.eclipse.jdt.core.formatter.insert_space_before_opening_bracket_in_array_type
 org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_annotation=do not insert
 org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_annotation_type_member_declaration=do not insert
 org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_catch=insert
-org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_constructor_declaration=do not insert
+org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_constructor_declaration=insert
 org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_enum_constant=do not insert
 org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_for=insert
 org.eclipse.jdt.core.formatter.insert_space_before_opening_paren_in_if=insert
