--- a/concurrent-hash-trie/.settings/org.eclipse.jdt.ui.prefs
+++ b/concurrent-hash-trie/.settings/org.eclipse.jdt.ui.prefs
@@ -1,7 +1,7 @@
-#Wed Nov 09 12:08:17 CET 2011
+#Mon Jan 09 23:40:50 CET 2012
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
-cleanup.add_missing_annotations=false
+cleanup.add_missing_annotations=true
 cleanup.add_missing_deprecated_annotations=true
 cleanup.add_missing_methods=false
 cleanup.add_missing_nls_tags=false
@@ -10,11 +10,11 @@ cleanup.add_missing_override_annotations_interface_methods=true
 cleanup.add_serial_version_id=false
 cleanup.always_use_blocks=true
 cleanup.always_use_parentheses_in_expressions=false
-cleanup.always_use_this_for_non_static_field_access=true
+cleanup.always_use_this_for_non_static_field_access=false
 cleanup.always_use_this_for_non_static_method_access=false
 cleanup.convert_to_enhanced_for_loop=false
-cleanup.correct_indentation=true
-cleanup.format_source_code=true
+cleanup.correct_indentation=false
+cleanup.format_source_code=false
 cleanup.format_source_code_changes_only=false
 cleanup.make_local_variable_final=true
 cleanup.make_parameters_final=true
@@ -23,7 +23,7 @@ cleanup.make_type_abstract_if_missing_method=false
 cleanup.make_variable_declarations_final=true
 cleanup.never_use_blocks=false
 cleanup.never_use_parentheses_in_expressions=true
-cleanup.organize_imports=true
+cleanup.organize_imports=false
 cleanup.qualify_static_field_accesses_with_declaring_class=false
 cleanup.qualify_static_member_accesses_through_instances_with_declaring_class=true
 cleanup.qualify_static_member_accesses_through_subtypes_with_declaring_class=true
@@ -45,12 +45,12 @@ cleanup.sort_members=false
 cleanup.sort_members_all=false
 cleanup.use_blocks=true
 cleanup.use_blocks_only_for_return_and_throw=false
-cleanup.use_parentheses_in_expressions=true
-cleanup.use_this_for_non_static_field_access=true
-cleanup.use_this_for_non_static_field_access_only_if_necessary=false
-cleanup.use_this_for_non_static_method_access=true
+cleanup.use_parentheses_in_expressions=false
+cleanup.use_this_for_non_static_field_access=false
+cleanup.use_this_for_non_static_field_access_only_if_necessary=true
+cleanup.use_this_for_non_static_method_access=false
 cleanup.use_this_for_non_static_method_access_only_if_necessary=true
-cleanup_profile=_fl
+cleanup_profile=_FLE
 cleanup_settings_version=2
 eclipse.preferences.version=1
 formatter_profile=_fl
